--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,4 @@
 [submodule "vim/vim/bundle/tagbar"]
 	path = vim/vim/bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
+    ignore = dirty
