--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,6 @@
 	path = vim/vim/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround.git
     ignore = dirty
+[submodule "vim/vim/bundle/vim-flake8"]
+	path = vim/vim/bundle/vim-flake8
+	url = https://github.com/nvie/vim-flake8.git
