--- a/.gitmodules
+++ b/.gitmodules
@@ -69,3 +69,6 @@
 [submodule "vim/vim/bundle/vim-flake8"]
 	path = vim/vim/bundle/vim-flake8
 	url = https://github.com/nvie/vim-flake8.git
+[submodule "vim/vim/bundle/vim-colorschemes"]
+	path = vim/vim/bundle/vim-colorschemes
+	url = https://github.com/flazz/vim-colorschemes.git
