--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,24 @@
 set -g default-terminal "xterm-256color"
 
-set -g prefix C-a
+set-option -g status-utf8 on
+
+set -g prefix C-q
 unbind C-b
-bind C-a send-prefix
+bind C-q send-prefix
 
 set -g status-keys vi
 setw -g mode-keys vi
-
 set -g status-position top
+
+set-window-option -g window-status-current-fg colour166
+set-window-option -g window-status-current-bg default
+
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+bind -n C-M-n split-window -h
+bind -n C-M-m split-window
+
+set-window-option -g automatic-rename
