Update tmux configurations.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,4 +21,8 @@ bind -n C-l select-pane -R
 bind -n C-M-n split-window -h
 bind -n C-M-m split-window
 
+bind -n C-M-i new-window
+bind -n C-n next-window
+bind -n C-p previous-window
+
 set-window-option -g automatic-rename
