--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,7 @@ bind -n C-M-n split-window -h
 bind -n C-M-m split-window
 
 bind -n C-M-i new-window
-bind -n C-n next-window
-bind -n C-p previous-window
+bind -n C-u next-window
+bind -n C-y previous-window
 
 set-window-option -g automatic-rename
