Remove YCM. Added neocomplete, supertab and jedi-vim.

--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,12 @@
 [submodule "vim/vim/bundle/vim-indent-guides"]
 	path = vim/vim/bundle/vim-indent-guides
 	url = https://github.com/nathanaelkane/vim-indent-guides.git
+[submodule "vim/vim/bundle/neocomplete.vim"]
+	path = vim/vim/bundle/neocomplete.vim
+	url = https://github.com/Shougo/neocomplete.vim.git
+[submodule "vim/vim/bundle/supertab"]
+	path = vim/vim/bundle/supertab
+	url = https://github.com/ervandew/supertab.git
+[submodule "vim/vim/bundle/jedi-vim"]
+	path = vim/vim/bundle/jedi-vim
+	url = https://github.com/davidhalter/jedi-vim.git
