--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,9 @@
 [submodule "vim/vim/bundle/ack.vim"]
 	path = vim/vim/bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
+[submodule "vim/vim/bundle/vim-javascript"]
+	path = vim/vim/bundle/vim-javascript
+	url = http://github.com/pangloss/vim-javascript.git
+[submodule "vim/vim/bundle/vim-jsx"]
+	path = vim/vim/bundle/vim-jsx
+	url = https://github.com/mxw/vim-jsx.git
